Edit Post: Fix Firefox scroll overflow in Manage Blocks
See: https://moduscreate.com/blog/how-to-fix-overflow-issues-in-css-flex-layouts/

--- a/packages/edit-post/src/components/manage-blocks-modal/style.scss
+++ b/packages/edit-post/src/components/manage-blocks-modal/style.scss
@@ -18,7 +18,8 @@
 .edit-post-manage-blocks-modal__content {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	flex: 0 1 100%;
+	min-height: 0;
 }
 
 .edit-post-manage-blocks-modal__no-results {
